--- a/src/renderer/flow-style.scss
+++ b/src/renderer/flow-style.scss
@@ -33,6 +33,7 @@ input[type="button"],
 input[type="text"],
 input[type="tel"],
 button,
+select,
 a,
 li,
 textarea {
@@ -94,7 +95,7 @@ a:active {
 
 #crm-icon {
   position: absolute;
-  margin: 3px;
+  margin: 5px;
 }
 
 #crm-icon:hover {
@@ -121,7 +122,7 @@ a:active {
 
 #time {
   position: absolute;
-  top: 8px;
+  top: 15px;
   padding: 0px;
   margin: 0px;
   left: 50%;
@@ -336,8 +337,10 @@ footer {
 
 #swat-note-input {
   position: relative;
+  display: block;
   margin: 0px;
-  margin-left: 20px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0px;
   border: 0px;
   width: 70%;
@@ -352,13 +355,19 @@ footer {
 
 #call-notes {
   position: relative;
+  display: block;
+  top: 25px;
   margin: 0px;
-  margin-left: 20px;
-  padding: 0px;
-  border: 0px;
-  width: 90%;
-  height: 130px;
-  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px;
+  background-color: hsl(0, 0%, 96%);
+  border-radius: 4px;
+  width: 70%;
+  height: 170px;
+  overflow: scroll;
+  -ms-overflow-style: scrollbar;
+  -webkit-app-region: no-drag;
 }
 
 #call-notes p { 
@@ -371,15 +380,17 @@ footer {
 }
 
 #note-buttons {
-  position: absolute;
+  position: relative;
+  top: 35px;
+  display: block;
   bottom: 0px;
   margin: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 0px;
   border: 0px;
-  width: 90%;
-  height: 35px;
+  width: 70%;
+  height: 30px;
 }
 
 #closed {
